# orchestrator/http/server/handler/expression/new.go
@@ -3,7 +3,6 @@ package expression
 import (
 	"github.com/chessnok/GoCalculator/orchestrator/internal/db"
 	"github.com/chessnok/GoCalculator/orchestrator/internal/expressions"
-	"github.com/chessnok/GoCalculator/orchestrator/pkg/rabbit/queue"
 	"github.com/labstack/echo/v4"
 )
 
@@ -11,7 +10,7 @@ type newExpressionRequest struct {
 	Expression string `json:"expression"`
 }
 
-func NewExpressionHandler(rmqProducer *queue.Producer, postgres *db.Postgres) echo.HandlerFunc {
+func NewExpressionHandler(postgres *db.Postgres) echo.HandlerFunc {
 	return func(c echo.Context) error {
 		req := newExpressionRequest{}
 		if err := c.Bind(&req); err != nil {
@@ -28,14 +27,6 @@ func NewExpressionHandler(rmqProducer *queue.Producer, postgres *db.Postgres) ec
 		err = postgres.Tasks.New(expr.Tasks)
 		if err != nil {
 			return c.JSON(500, map[string]string{"error": "Internal server error"})
-		}
-		for _, task := range expr.Tasks {
-			if task.AIsNumeral && task.BIsNumeral {
-				err := rmqProducer.SendJson(task)
-				if err != nil {
-					return c.JSON(500, map[string]string{"error": "Internal server error"})
-				}
-			}
 		}
 		return c.JSON(200, expr)
 	}
