# orchestrator/http/server/server.go
@@ -29,7 +29,7 @@ func NewServer(config *Config) *Server {
 	agentsRoute := s.Group("/agent")
 	agentsRoute.GET("/list", agents.GetListAgentsHandler(config.DB.Agents))
 	expressionsRoute := s.Group("/expression")
-	expressionsRoute.POST("/new", expression.NewExpressionHandler(config.Producer, config.DB))
+	expressionsRoute.POST("/new", expression.NewExpressionHandler(config.DB))
 	expressionsRoute.GET("/list", expression.GetListExpressionsHandler(config.DB.Expressions))
 	return &Server{
 		server: s,
@@ -44,9 +44,9 @@ func validatePort(port int) error {
 }
 
 // Start starts the server and listens for incoming requests
-func (s *Server) Start() error {
+func (s *Server) Start() {
 	if err := validatePort(s.config.Port); err != nil {
-		return err
+		return
 	}
-	return s.server.Start(":" + strconv.Itoa(s.config.Port))
+	s.server.Start(":" + strconv.Itoa(s.config.Port))
 }
